[gd_scene load_steps=3 format=3 uid="uid://c84h8p5bpuub6"]

[ext_resource type="Theme" uid="uid://e5uhj4dxwoy1" path="res://assets/menu_theme.tres" id="1_522c7"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_k7a5c"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_522c7")
script = ExtResource("1_k7a5c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -37.0
offset_right = 35.5
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../ScoresButton")
text = "start"
flat = true

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "options"
flat = true

[node name="ScoresButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../StartButton")
text = "high scores"
flat = true

[node name="PlatformLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -17.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "platform:mobile"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="focus_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/StartButton" to="." method="_on_start_button_focus_exited"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_focus_exited"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/ScoresButton" to="." method="_on_scores_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/ScoresButton" to="." method="_on_scores_button_focus_exited"]
[connection signal="pressed" from="VBoxContainer/ScoresButton" to="." method="_on_scores_button_pressed"]
